--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js",
-    "server":"nodemon server.js"
-
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC", 
+  "license": "ISC",
   "dependencies": {
     "concurrently": "^6.1.0",
+    "config": "^3.3.6",
     "express": "^4.17.1",
     "mongoose": "^5.12.8"
   }
