--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -41,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000/api/Todos"
+  "proxy": "http://localhost:5000/api/Todos"
 }
