--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client":"npm start --prefix  client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "client": "npm start --prefix  client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "concurrently": "^6.1.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
-    "mongoose": "^5.12.8"
+    "mongoose": "^5.12.8",
+    "path": "^0.12.7"
   }
 }
